<resources>
    <string name="app_name">Meet&amp;Eat</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyDhWUfyNygBcIGXTqhJMFQfBaAnpfjHVmM
    </string>

    <!-- General -->
    <string name="no_internet_connection">This feature requires an Internet connection</string>
    <string name="delete">Delete</string>
    <string name="error_field_required">This field is required</string>

    <!-- Login -->
    <string name="title_login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="action_sign_in">Sign in (or sign up)</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_taken_email">This email is already taken</string>
    <string name="request_email">This username is not taken. Please write your email in order to finish the creation of a new account</string>

    <!-- Navigation -->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_preferences">Preferences</string>

    <!-- Settings -->
    <string name="account_management">Account management</string>
    <string name="edit_account">Edit account</string>
    <string name="delete_account">Delete account</string>
    <string name="copyright">Copyright © 2017 - Gerardo Medina</string>
    <string name="logout">Logout</string>

    <!-- Meeting -->

    <string name="title_activity_scrolling">Meeting</string>


    <string name="title_invitations">Invitations</string>

    <!-- Contacts -->
    <string name="search_new_contacts">Search new contacts</string>
    <string name="error_deleting_contacts">Error deleting contact</string>

    <!-- Map -->
    <string name="title_activity_location">Location</string>

    <!-- New Meeting -->
    <string name="new_meeting">New meeting</string>
    <string name="new_meeting_title">Title</string>
    <string name="new_meeting_location">Location</string>
    <string name="new_meeting_datetime">Date and time</string>
    <string name="new_meeting_color">Color</string>
    <string name="new_meeting_participants">Participants</string>
    <string name="choose_color">Choose color</string>
    <string name="error_field_too_long">Should be shorter</string>

    <string name="add_food_label">Add food</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_amount">Amount</string>
    <string name="selected_icon">Icon</string>
    <string name="select_an_icon">Select an icon from this list</string>
    <string name="error_adding_food">Error adding food</string>
    <string name="calendar">Calendar</string>
    <string name="no_meeting">You have no meetings. Create a new one on the dashboard screen!</string>
    <string name="set_alarm_button">Set a reminder</string>
    <string name="set_alarm_text">Your next meeting takes place on %1$s at %2$s</string>
    <string name="title_history">History</string>
    <string name="dummy" />
    <string name="what">What</string>
    <string name="who">Who</string>
    <string name="how_many">#</string>
    <string name="add_participant_label">Add participant</string>
    <string name="participants">Participants</string>
    <string name="location">Location</string>
    <string name="error_retrieving_data">Error retrieving or posting data</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_delete_contact">Are you sure you want to delete this contact?</string>
    <string name="no_user_found">No user found with that criteria</string>
    <string name="no_spaces_allowed">Spaces are not allowed</string>
    <string name="error_adding_contact">Error adding contact</string>
    <string name="contact_added_successfully">Contact invited</string>
    <string name="no_contact">You have no contacts. Please look for them with the upper search box or swipe to refresh.</string>
    <string name="tap_to_add_contact">Tap on the user to add it to your contact list</string>
    <string name="long_tap_to_delete_contact">Long press to delete a contact or swipe to refresh</string>
    <string name="chat">Chat</string>
    <string name="send_a_message">Send a message</string>
    <string name="food">Food</string>
    <string name="error_sending_message">Error sending message</string>
    <string name="select_from_contacts">Choose the people you want to invite</string>
    <string name="new_meeting_no_contact">You have no contacts to invite. You can also create the meeting and then add some contacts.</string>
    <string name="exit">Exit</string>
    <string name="enter">Enter</string>
    <string name="invitation_meeting">Someone has invited you to %1$s</string>
    <string name="confirmation_accept_invitation">Do you accept this invitation?</string>
    <string name="old_meetings_info">Old meetings will be automatically deleted after 10 days</string>
    <string name="no_chat">You can not use this chat anymore</string>
    <string name="no_contact_to_invite">You have no contacts to invite. Add them in the main menu.</string>
    <string name="invitation_contact">%1$s wants to be your contact</string>
    <string name="welcome">Welcome %1$s</string>
    <string name="error_creating_meeting">Error creating meeting</string>
    <string name="error_inviting_contacts">Error inviting contacts</string>
    <string name="participants_invited_uuccessfully">Participants invited successfully</string>
    <string name="close">Close</string>
    <string name="admin_options">Admin options</string>
    <string name="title_activity_admin">Admin</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="edit_title">Edit title</string>
</resources>
