<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/title_preferences">

    <Preference
        android:key="welcome"
        android:selectable="false"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/welcome" />

    <PreferenceCategory android:title="@string/account_management">
        <Preference
            android:icon="@drawable/ic_edit_black"
            android:key="edit_account"
            android:title="@string/edit_account" />
        <Preference
            android:icon="@drawable/ic_delete"
            android:key="delete_account"
            android:title="@string/delete_account" />
        <Preference
            android:icon="@drawable/ic_logout"
            android:key="logout"
            android:title="@string/logout" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_this_app">
        <Preference
            android:icon="@drawable/ic_feedback"
            android:key="feedback"
            android:title="@string/feedback" />

        <Preference
            android:icon="@drawable/ic_share"
            android:key="share"
            android:title="@string/share" />
        <Preference
            android:icon="@drawable/ic_copyright"
            android:key="copyright"
            android:title="@string/copyright" />
    </PreferenceCategory>

</PreferenceScreen>