<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_invitations"
        android:icon="@drawable/ic_notifications_black_24px"
        android:title="@string/title_invitations" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_today_black_24px"
        android:title="@string/title_calendar" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24px"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/ic_perm_contact_calendar_black_24px"
        android:title="@string/title_contacts" />

    <item
        android:id="@+id/navigation_preferences"
        android:icon="@drawable/ic_settings_black_24px"
        android:title="@string/title_preferences" />

</menu>
