<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.gerardomedina.meetandeat.view.activity.MeetingActivity">
    <item
        android:id="@+id/menu_chat"
        android:title="@string/chat"
        android:icon="@drawable/ic_chat"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_participants"
        android:title="@string/participants"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_location"
        android:title="@string/location"
        app:showAsAction="never" />


    <item
        android:id="@+id/menu_options"
        android:title="Options"
        app:showAsAction="never" />
</menu>
